--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
 
     <section class="choose__container" id="choose">
       
-        <!-- <div class="choose__image">
+         <div class="choose__image">
           <img src="assets/qurduli.jpg" alt="choose" />
-        </div> -->
+        </div> 
       <div class="choose__content">
         <h2 class="section__header">რატომ უნდა ამირჩიო მე</h2>
         
